[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://scenes/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Wall.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Paddle.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/KillBox.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 600, 10 )

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 600, 10 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( 499.5, -25.5 )
points = PoolVector2Array( 0, 0, 0, 678 )
texture_mode = 54

[node name="Ball" parent="." instance=ExtResource( 2 )]
position = Vector2( 501, 294.5 )

[node name="TopWall" parent="." instance=ExtResource( 3 )]
position = Vector2( 489.5, 54 )
_color = Color( 0.941176, 0.0784314, 0.0784314, 1 )

[node name="Shape" parent="TopWall" index="0"]
shape = SubResource( 1 )

[node name="BottomWall" parent="." instance=ExtResource( 3 )]
editor/display_folded = true
position = Vector2( 508, 586.5 )
_color = Color( 0.0431373, 0.909804, 0.2, 1 )

[node name="Shape" parent="BottomWall" index="0"]
shape = SubResource( 2 )

[node name="P1Paddle" parent="." instance=ExtResource( 4 )]
position = Vector2( 78.5, 310.5 )

[node name="P2Paddle" parent="." instance=ExtResource( 4 )]
position = Vector2( 945.5, 300.5 )

[node name="P1KillBox" parent="." instance=ExtResource( 5 )]
position = Vector2( 9.00003, 294 )

[node name="P2KillBox" parent="." instance=ExtResource( 5 )]
position = Vector2( 1012.5, 294 )

[node name="P1Score" type="Label" parent="."]
margin_left = 373.0
margin_top = 12.6667
margin_right = 432.0
margin_bottom = 26.6667
text = "p1  score"

[node name="P2Score" type="Label" parent="."]
margin_left = 581.833
margin_top = 16.0
margin_right = 640.833
margin_bottom = 30.0
text = "p2  score"

[node name="Wall" parent="." instance=ExtResource( 3 )]
position = Vector2( 498, 226.5 )

[node name="Wall2" parent="." instance=ExtResource( 3 )]
position = Vector2( 498, 349.5 )
[connection signal="kill_ball" from="P1KillBox" to="." method="_on_P1KillBox_kill_ball"]
[connection signal="kill_ball" from="P2KillBox" to="." method="_on_P2KillBox_kill_ball"]

[editable path="TopWall"]

[editable path="BottomWall"]
